--- a/development/gene_prediction_nb.ipynb
+++ b/development/gene_prediction_nb.ipynb
@@ -602,13 +602,7 @@
       "Epoch 35/100\n",
       "20/20 [==============================] - ETA: 0s - loss: 4.1143 - negative_binomial_loss: 4.11 - 0s 4ms/step - loss: 4.1015 - negative_binomial_loss: 4.1015 - val_loss: 3.4182 - val_negative_binomial_loss: 3.4182\n",
       "Epoch 36/100\n",
-      "20/20 [==============================] - ETA: 0s - loss: 3.6977 - negative_binomial_loss: 3.69 - 0s 4ms/step - loss: 3.9156 - negative_binomial_loss: 3.9156 - val_loss: 3.6248 - val_negative_binomial_loss: 3.6248\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "20/20 [==============================] - ETA: 0s - loss: 3.6977 - negative_binomial_loss: 3.69 - 0s 4ms/step - loss: 3.9156 - negative_binomial_loss: 3.9156 - val_loss: 3.6248 - val_negative_binomial_loss: 3.6248\n",
       "Epoch 37/100\n",
       "20/20 [==============================] - ETA: 0s - loss: 3.6112 - negative_binomial_loss: 3.61 - 0s 4ms/step - loss: 3.9829 - negative_binomial_loss: 3.9829 - val_loss: 3.7902 - val_negative_binomial_loss: 3.7902\n",
       "Epoch 38/100\n",
@@ -982,7 +976,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
