--- a/Spatial_Transcriptomics/Onkar_py/gMLP_2.ipynb
+++ b/Spatial_Transcriptomics/Onkar_py/gMLP_2.ipynb
@@ -38,18 +38,14 @@
     "gene_exp.index = h5ad.index\n",
     "gene_exp['dataset'] = list(h5ad['library_id'])\n",
     "gene_exp = gene_exp[[\"COX6C\",\"dataset\"]]\n",
+    "\n",
     "Y = gene_exp.loc[(gene_exp['dataset'] == \"block1\")]\n",
     "test_Y_FFPE = gene_exp.loc[(gene_exp['dataset'] == \"FFPE\")]\n",
     "\n",
     "\n",
-    "xtrain = pd.read_csv(\"/home/uqomulay/90days/h5ad_obs.csv\", index_col=0)\n",
-    "xtrain['tile_tissue_mask_path'] = xtrain['tile_tissue_mask_path'].str.split('/', expand=True)[3].str[:-5]\n",
-    "xtrain = xtrain.loc[xtrain['library_id']=='block1']\n",
+    "xtrain = h5ad.loc[h5ad['library_id']=='block1']\n",
     "\n",
-    "\n",
-    "x_test = pd.read_csv(\"/home/uqomulay/90days/h5ad_obs.csv\", index_col=0)\n",
-    "x_test['tile_tissue_mask_path'] = x_test['tile_tissue_mask_path'].str.split('/', expand=True)[3].str[:-5]\n",
-    "X_test_FFPE =  x_test.loc[(x_test['library_id'] == \"FFPE\")]\n"
+    "X_test_FFPE =  h5ad.loc[(h5ad['library_id'] == \"FFPE\")]"
    ]
   },
   {
