--- a/Spatial_Transcriptomics/Onkar_py/STimage_Classification_ST-Net.ipynb
+++ b/Spatial_Transcriptomics/Onkar_py/STimage_Classification_ST-Net.ipynb
@@ -5,7 +5,15 @@
    "id": "4c120c47-1da5-489c-bca3-b7dd8c176fdf",
    "metadata": {},
    "source": [
-    "# STimage.py"
+    "## STimage - ST-Net/Hist2gene Old Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "efb03ae8-87e2-4ce6-b866-13ef94afb68d",
+   "metadata": {},
+   "source": [
+    "### Resnet50 Features, Logistic Regressor and Performance Metrics, LOOCV- Leave One Out Cross-Validation"
    ]
   },
   {
@@ -39,9 +47,6 @@
     "from sklearn.metrics import confusion_matrix\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
-    "#model_c = MLPClassifier(max_iter=10000, hidden_layer_sizes=(150,100,50), early_stopping=True, random_state=0, activation = 'relu')\n",
-    "#Y_train = np.log(2*(Y_train.iloc[:,:-1])+1)\n",
-    "#Y_test = np.log(2*(Y_test.iloc[:,:-1])+1)\n",
     "\n",
     "def ResNet50_features(unzipped_file, pre_model):\n",
     "    files = pd.DataFrame(unzipped_file.namelist()).iloc[1:,:][0]\n",
@@ -136,6 +141,132 @@
     "resnet_features = ResNet50_features(unzipped_file, pre_model)\n",
     "anndata = anndata.read_h5ad(Path+\"all_adata.h5ad\")\n",
     "data = \"G1\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dbf2d280-3460-4af1-9664-cd6ce30a3e6f",
+   "metadata": {},
+   "source": [
+    "### Exceptional Handling for some sets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "706da710-72e5-4f15-9e54-44690676b804",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "score_auc = []; score_F1 = []; score_precision = []; score_recall = []\n",
+    "for i in range(len(pred[0])):\n",
+    "    try:\n",
+    "        score = roc_auc_score(pred[:,i], Y_test.iloc[:,i])\n",
+    "        score_auc.append(score)\n",
+    "    except:\n",
+    "        score_auc.append(score)\n",
+    "\n",
+    "for i in range(len(pred[0])):\n",
+    "    try:\n",
+    "        score = f1_score(pred[:,i], Y_test.iloc[:,i], average=\"binary\")\n",
+    "        score_F1.append(score)\n",
+    "    except:\n",
+    "        score_F1.append(score)\n",
+    "\n",
+    "for i in range(len(pred[0])):\n",
+    "    try:\n",
+    "        score = precision_score(pred[:,i], Y_test.iloc[:,i], average=\"binary\")\n",
+    "        score_precision.append(score)\n",
+    "    except:\n",
+    "        score_precision.append(score)\n",
+    "\n",
+    "for i in range(len(pred[0])):\n",
+    "    try:\n",
+    "        score = recall_score(pred[:,i], Y_test.iloc[:,i], average=\"binary\", zero_division=1)\n",
+    "        score_recall.append(score)\n",
+    "    except:\n",
+    "        score_recall.append(score)\n",
+    "\n",
+    "roc = pd.DataFrame(index = gene_exp.iloc[:,:-1].columns)\n",
+    "\n",
+    "roc[\"AUROC\"] = score_auc\n",
+    "roc[\"F1\"] = score_F1\n",
+    "roc[\"Precision\"] = score_precision\n",
+    "roc[\"Recall\"] = score_recall\n",
+    "\n",
+    "roc = pd.melt(roc)\n",
+    "roc['metrics'] = [\"AUROC\",\"AUROC\", \"AUROC\", \"AUROC\", \"AUROC\", \"AUROC\", \"AUROC\", \"AUROC\", \"AUROC\", \"AUROC\", \"AUROC\", \"AUROC\", \"AUROC\", \"AUROC\", \"AUROC\",\n",
+    "                  \"F1\",\"F1\", \"F1\", \"F1\", \"F1\", \"F1\", \"F1\", \"F1\", \"F1\", \"F1\", \"F1\", \"F1\", \"F1\", \"F1\", \"F1\",\n",
+    "                  \"Precision\",\"Precision\", \"Precision\", \"Precision\", \"Precision\", \"Precision\", \"Precision\", \"Precision\", \"Precision\", \"Precision\", \"Precision\", \"Precision\", \"Precision\", \"Precision\", \"Precision\",\n",
+    "                  \"Recall\",\"Recall\", \"Recall\", \"Recall\", \"Recall\", \"Recall\", \"Recall\", \"Recall\", \"Recall\", \"Recall\", \"Recall\", \"Recall\", \"Recall\", \"Recall\", \"Recall\"]\n",
+    "roc['metrics'] = roc['metrics']+\"_\"+data\n",
+    "roc.to_csv(Path+'H3_class_score.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "17995217-be71-403b-8408-b4ec78037f20",
+   "metadata": {},
+   "source": [
+    "### Plotting the scores - boxplot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95cb4d11-9815-44f3-80c0-29768451aa23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "from matplotlib import pyplot as plt\n",
+    "#Path=\"/home/uqomulay/90days/Hist2gene/\"\n",
+    "\n",
+    "a1 = pd.read_csv(Path+'A1_class_score.csv')\n",
+    "a2 = pd.read_csv(Path+'A2_class_score.csv')\n",
+    "a3 = pd.read_csv(Path+'A3_class_score.csv')\n",
+    "a4 = pd.read_csv(Path+'A4_class_score.csv')\n",
+    "a5 = pd.read_csv(Path+'A5_class_score.csv')\n",
+    "a6 = pd.read_csv(Path+'A6_class_score.csv')\n",
+    "\n",
+    "b1 = pd.read_csv(Path+'B1_class_score.csv')\n",
+    "b2 = pd.read_csv(Path+'B2_class_score.csv')\n",
+    "b3 = pd.read_csv(Path+'B3_class_score.csv')\n",
+    "b4 = pd.read_csv(Path+'B4_class_score.csv')\n",
+    "b5 = pd.read_csv(Path+'B5_class_score.csv')\n",
+    "b6 = pd.read_csv(Path+'B6_class_score.csv')\n",
+    "\n",
+    "c1 = pd.read_csv(Path+'C1_class_score.csv')\n",
+    "c2 = pd.read_csv(Path+'C2_class_score.csv')\n",
+    "c3 = pd.read_csv(Path+'C3_class_score.csv')\n",
+    "c4 = pd.read_csv(Path+'C4_class_score.csv')\n",
+    "c5 = pd.read_csv(Path+'C5_class_score.csv')\n",
+    "c6 = pd.read_csv(Path+'C6_class_score.csv')\n",
+    "\n",
+    "e1 = pd.read_csv(Path+'E1_class_score.csv')\n",
+    "e2 = pd.read_csv(Path+'E2_class_score.csv')\n",
+    "e3 = pd.read_csv(Path+'E3_class_score.csv')\n",
+    "\n",
+    "f1 = pd.read_csv(Path+'F1_class_score.csv')\n",
+    "f2 = pd.read_csv(Path+'F2_class_score.csv')\n",
+    "f3 = pd.read_csv(Path+'F3_class_score.csv')\n",
+    "\n",
+    "g1 = pd.read_csv(Path+'G1_class_score.csv')\n",
+    "g2 = pd.read_csv(Path+'G2_class_score.csv')\n",
+    "g3 = pd.read_csv(Path+'G3_class_score.csv')\n",
+    "\n",
+    "h1 = pd.read_csv(Path+'H1_class_score.csv')\n",
+    "h2 = pd.read_csv(Path+'H2_class_score.csv')\n",
+    "h3 = pd.read_csv(Path+'H3_class_score.csv')\n",
+    "\n",
+    "roc = pd.concat([a1,a2,a3,a4,a5,a6,b1,b2,b3,b4,b5,b6,c1,c2,c3,c4,c5,c6,e1,e2,e3,f1,f2,f3,g1,g2,g3,h1,h2,h3],axis=0)\n",
+    "roc['metrics'] = roc['metrics'].str.split('_', expand=True)[1]\n",
+    "\n",
+    "plt.figure(figsize=(19.20,10.80))\n",
+    "sns.set_theme(style=\"whitegrid\")\n",
+    "plt.ylim(-0.05, 1.05)\n",
+    "sns.boxplot(x=\"metrics\", y=\"value\", hue=\"variable\", data=roc).figure.savefig(Path+'Hist2gene_boxplot.png')"
    ]
   }
  ],
