--- a/Spatial_Transcriptomics/Onkar_py/STimage_Classification_multi_patient.ipynb
+++ b/Spatial_Transcriptomics/Onkar_py/STimage_Classification_multi_patient.ipynb
@@ -244,36 +244,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "6d5dda2e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "AnnData object with n_obs × n_vars = 21059 × 19\n",
-       "    obs: 'in_tissue', 'array_row', 'array_col', 'imagecol', 'imagerow', 'tile_tissue_mask_path', 'tissue_area', 'tile_path', 'library_id'\n",
-       "    var: 'gene_ids-FFPE', 'feature_types-FFPE', 'genome-FFPE', 'gene_ids-block1', 'feature_types-block1', 'genome-block1', 'gene_ids-block2', 'feature_types-block2', 'genome-block2'\n",
-       "    uns: 'spatial'\n",
-       "    obsm: 'spatial', 'resnet50_features', 'true_gene_expression'"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test_adata"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
    "id": "9d884cd0",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -397,7 +370,7 @@
     "                score =  roc_auc_score(performance_metrics_all_predictions[dataset].iloc[:,gene],gene_exp_binary_all_true[dataset].iloc[:,gene])\n",
     "                AUROC_genes.append(score)\n",
     "            except:\n",
-    "                AUROC_genes.append(score)\n",
+    "                AUROC_genes.append(0)\n",
     "\n",
     "    for dataset in range(len(gene_exp_binary_all_true)):\n",
     "        for gene in range(len(gene_list)):\n",
@@ -405,7 +378,7 @@
     "                score =  f1_score(performance_metrics_all_predictions[dataset].iloc[:,gene],gene_exp_binary_all_true[dataset].iloc[:,gene])\n",
     "                F1_genes.append(score)\n",
     "            except:\n",
-    "                F1_genes.append(score)\n",
+    "                F1_genes.append(0)\n",
     "\n",
     "    for dataset in range(len(gene_exp_binary_all_true)):\n",
     "        for gene in range(len(gene_list)):\n",
@@ -413,7 +386,7 @@
     "                score =  precision_score(performance_metrics_all_predictions[dataset].iloc[:,gene],gene_exp_binary_all_true[dataset].iloc[:,gene])\n",
     "                Precision_genes.append(score)\n",
     "            except:\n",
-    "                Precision_genes.append(score)\n",
+    "                Precision_genes.append(0)\n",
     "\n",
     "    for dataset in range(len(gene_exp_binary_all_true)):\n",
     "        for gene in range(len(gene_list)):\n",
@@ -421,7 +394,7 @@
     "                score =  recall_score(performance_metrics_all_predictions[dataset].iloc[:,gene],gene_exp_binary_all_true[dataset].iloc[:,gene])\n",
     "                Recall_genes.append(score)\n",
     "            except:\n",
-    "                Recall_genes.append(score)\n",
+    "                Recall_genes.append(0)\n",
     "\n",
     "    AUROC_genes = pd.DataFrame(AUROC_genes); F1_genes = pd.DataFrame(F1_genes); Precision_genes = pd.DataFrame(Precision_genes); Recall_genes = pd.DataFrame(Recall_genes)\n",
     "    Performance_metrics = pd.concat([AUROC_genes,F1_genes,Precision_genes,Recall_genes])\n",
@@ -438,7 +411,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -452,7 +425,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
